--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Evitachan by EvitaChan</title>
+    <title>Evita & Her Display</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Evitachan</h1>
+        <h1>Evita & Her Display</h1>
         <h2></h2>
         <a href="https://github.com/EvitaChan/EvitaChan" class="button"><small>View project on</small> GitHub</a>
       </div>
@@ -30,11 +30,8 @@
         <section id="main-content">
           <hr>
 
-<p>layout: page
-title: Airspace</p>
-
 <h2>
-<a id="permalink-" class="anchor" href="#permalink-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>permalink: /</h2>
+<a id="permalink-" class="anchor" href="#permalink-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>I'm a maker！</h2>
 
 
 
@@ -180,7 +177,6 @@ title: Airspace</p>
           <h2>
 <a id="we-design-delightful-digital-experiences" class="anchor" href="#we-design-delightful-digital-experiences" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>We design delightful digital experiences.</h2>
           <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-          <a href="#">Tell Us Your Story</a>
         </div>
       </div>
     </div>
@@ -200,8 +196,7 @@ title: Airspace</p>
     </div>
     <div>
       <div>
-        <div>
-          <ul>
+        <div>       <ul>
             <li>
               <div>
                 <i></i>
@@ -236,50 +231,6 @@ title: Airspace</p>
             </li>
 
 </ul>
-<pre><code>      &lt;/ul&gt;
-    &lt;/div&gt;
-  &lt;/div&gt;
-  &lt;div class="col-md-6"&gt;
-    &lt;div class="testimonial-carousel"&gt;
-      &lt;div id="testimonial-slider" class="owl-carousel"&gt;
-        &lt;div&gt;
-            &lt;img src="img/cotation.png" alt="IMG"&gt;
-            &lt;p&gt;"This Company created an e-commerce site with the tools to make our business a success, with innovative ideas we feel that our site has unique elements that make us stand out from the crowd."&lt;/p&gt;
-            &lt;div class="user"&gt;
-              &lt;img src="img/item-img1.jpg" alt="Pepole"&gt;
-              &lt;p&gt;&lt;span&gt;Rose Ray&lt;/span&gt; CEO-Themefisher&lt;/p&gt;
-            &lt;/div&gt;
-        &lt;/div&gt;
-        &lt;div&gt;
-          &lt;img src="img/cotation.png" alt="IMG"&gt;
-            &lt;p&gt;"This Company created an e-commerce site with the tools to make our business a success, with innovative ideas we feel that our site has unique elements that make us stand out from the crowd."&lt;/p&gt;
-            &lt;div class="user"&gt;
-              &lt;img src="img/item-img1.jpg" alt="Pepole"&gt;
-              &lt;p&gt;&lt;span&gt;Rose Ray&lt;/span&gt; CEO-Themefisher&lt;/p&gt;
-            &lt;/div&gt;
-        &lt;/div&gt;
-        &lt;div&gt;
-          &lt;img src="img/cotation.png" alt="IMG"&gt;
-            &lt;p&gt;"This Company created an e-commerce site with the tools to make our business a success, with innovative ideas we feel that our site has unique elements that make us stand out from the crowd."&lt;/p&gt;
-            &lt;div class="user"&gt;
-              &lt;img src="img/item-img1.jpg" alt="Pepole"&gt;
-              &lt;p&gt;&lt;span&gt;Rose Ray&lt;/span&gt; CEO-Themefisher&lt;/p&gt;
-            &lt;/div&gt;
-        &lt;/div&gt;
-        &lt;div&gt;
-          &lt;img src="img/cotation.png" alt="IMG"&gt;
-            &lt;p&gt;"This Company created an e-commerce site with the tools to make our business a success, with innovative ideas we feel that our site has unique elements that make us stand out from the crowd."&lt;/p&gt;
-            &lt;div class="user"&gt;
-              &lt;img src="img/item-img1.jpg" alt="Pepole"&gt;
-              &lt;p&gt;&lt;span&gt;Rose Ray&lt;/span&gt; CEO-Themefisher&lt;/p&gt;
-            &lt;/div&gt;
-        &lt;/div&gt;
-      &lt;/div&gt;
-    &lt;/div&gt;
-  &lt;/div&gt;
-&lt;/div&gt;
-</code></pre>
-
 <p></p>
 </div>
 </div>
