--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Evita & Her Display</title>
+    <title>Evita & <br>Her Display</title>
   </head>
 
   <body>
