--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
       <div>
         <div>
-          <img src="img/wrapper-img.png" alt="Img">
+          <img src="img/deerring.jpg" width="600"><br>
         </div>
       </div>
     </div>
@@ -103,8 +103,10 @@
         <div>
           <i></i>
           <h4>
-<a id="branding" class="anchor" href="#branding" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Branding</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+<a id="branding" class="anchor" href="#branding" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Week 1</h4>
+          <p>Introduct ourselves.
+          ABC of codes to things. 
+          The use of 3D printer.</p>
         </div>
       </div>
       <div>
