--- a/index.html
+++ b/index.html
@@ -104,16 +104,19 @@
           <i></i>
           <h4>
 <a id="branding" class="anchor" href="#branding" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Week 1</h4>
-          <p>Introduct ourselves.
-          ABC of codes to things. 
+          <p>Introduct ourselves.<br>
+          ABC of codes to things.<br> 
           The use of 3D printer.</p>
+          <div>
+          <img src="img/deerring.jpg" width="600"><br>
+        </div>
         </div>
       </div>
       <div>
         <div>
           <i></i>
           <h4>
-<a id="web-design" class="anchor" href="#web-design" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Web Design</h4>
+<a id="web-design" class="anchor" href="#web-design" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Week 2</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
         </div>
       </div>
