--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
         </div>
       </div>
       <div>
-        <div>
-          <img src="img/deerring.jpg" width="600"><br>
-        </div>
+       
       </div>
     </div>
   </div>
@@ -117,15 +115,18 @@
           <i></i>
           <h4>
 <a id="web-design" class="anchor" href="#web-design" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Week 2</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+          <p> Use Autodesk Fusion 360.<br>I drew a ring with my name.</p>
+          <div>
+          <img src="img/ring.jpg" width="600"><br>
+        </div>
         </div>
       </div>
       <div>
         <div>
           <i></i>
           <h4>
-<a id="app-design" class="anchor" href="#app-design" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>App Design</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+<a id="app-design" class="anchor" href="#app-design" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Week 3</h4>
+          <p>Coding on Arduino.</p>
         </div>
       </div>
       <div>
