--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div>
         <div>
           <h1>
-<a id="evita---her-display" class="anchor" href="#evita---her-display" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Evita &amp; <br> Her Display</h1>
+<a id="evita---her-display" class="anchor" href="#evita---her-display" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
           <p>Hey!This is Evita.Welcome to my space.<br> Let me show you my course--Codes to Things.</p>
         </div>
       </div>
