--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div>
           <h1>
 <a id="evita---her-display" class="anchor" href="#evita---her-display" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
-          <p>Hey!This is Evita.Welcome to my space.<br> Let me show you my course--Codes to Things.</p>
+          <p>Hey ! This is Evita.Welcome to my space.<br> Let me show you my course--<br>Codes to Things.</p>
         </div>
       </div>
     </div>
@@ -126,15 +126,18 @@
           <i></i>
           <h4>
 <a id="app-design" class="anchor" href="#app-design" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Week 3</h4>
-          <p>Coding on Arduino.</p>
+          <p>Coding on Arduino.<br>The final product.</p>
+          <div>
+          <img src="img/laser cutting.jpg" width="600"><br>
+        </div>
         </div>
       </div>
       <div>
         <div>
           <i></i>
           <h4>
-<a id="start-up" class="anchor" href="#start-up" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Start Up</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+<a id="start-up" class="anchor" href="#start-up" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Week 4</h4>
+          <p> Laser cutting.</p>
         </div>
       </div>
       <div>
