--- a/index.html
+++ b/index.html
@@ -126,7 +126,15 @@
           <i></i>
           <h4>
 <a id="app-design" class="anchor" href="#app-design" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Week 3</h4>
-          <p>Coding on Arduino.<br>The final product.</p>
+          <p>Coding on Arduino.</p>         
+        </div>
+      </div>
+      <div>
+        <div>
+          <i></i>
+          <h4>
+<a id="start-up" class="anchor" href="#start-up" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Week 4</h4>
+          <p> Laser cutting.<br>The final product.</p>
           <div>
           <img src="img/laser cutting.jpg" width="600"><br>
         </div>
@@ -136,16 +144,8 @@
         <div>
           <i></i>
           <h4>
-<a id="start-up" class="anchor" href="#start-up" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Week 4</h4>
-          <p> Laser cutting.</p>
-        </div>
-      </div>
-      <div>
-        <div>
-          <i></i>
-          <h4>
-<a id="logo-design" class="anchor" href="#logo-design" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Logo Design</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+<a id="logo-design" class="anchor" href="#logo-design" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> Our product</h4>
+          <p>A egway </p>
         </div>
       </div>
       <div>
