--- a/index.html
+++ b/index.html
@@ -145,106 +145,26 @@
           <i></i>
           <h4>
 <a id="logo-design" class="anchor" href="#logo-design" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> Our product</h4>
-          <p>A egway </p>
+          <p>A segway </p>
         </div>
       </div>
       <div>
-        <div>
-          <i></i>
-          <h4>
-<a id="development" class="anchor" href="#development" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Development</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+          <img src="img/mf.jpg" width="600"><br>
         </div>
-      </div>
       <div>
-        <div>
-          <i></i>
-          <h4>
-<a id="brand-identity" class="anchor" href="#brand-identity" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Brand Identity</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+          <img src="img/segway.jpg" width="600"><br>
         </div>
-      </div>
-      <div>
-        <div>
-          <i></i>
-          <h4>
-<a id="brand-identity-1" class="anchor" href="#brand-identity-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Brand Identity</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
-        </div>
-      </div>
-    </div>
+          </div>
   </div>
  </p>
 
 
 
-<p> 
-  <div>
-    <div>
-      <div>
-        <div>
-          <h2>
-<a id="we-design-delightful-digital-experiences" class="anchor" href="#we-design-delightful-digital-experiences" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>We design delightful digital experiences.</h2>
-          <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-        </div>
-      </div>
-    </div>
-  </div>
- </p>
 
 
 
-<p> 
-  <div>
-    <div>
-      <div>
-        <h2>
-<a id="fun-facts-about-us" class="anchor" href="#fun-facts-about-us" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Fun Facts About Us</h2>
-        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
-      </div>
-    </div>
-    <div>
-      <div>
-        <div>       <ul>
-            <li>
-              <div>
-                <i></i>
-                <h4>
-<a id="20000" class="anchor" href="#20000" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>20000</h4>
-                Cups Of Coffee
-              </div>
-            </li>
-            <li>
-              <div>
-                <i></i>
-                <h4>
-<a id="20000-1" class="anchor" href="#20000-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>20000</h4>
-                Cups Of Coffee
-              </div>
-            </li>
-            <li>
-              <div>
-                <i></i>
-                <h4>
-<a id="20000-2" class="anchor" href="#20000-2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>20000</h4>
-                Cups Of Coffee
-              </div>
-            </li>
-            <li>
-              <div>
-                <i></i>
-                <h4>
-<a id="20000-3" class="anchor" href="#20000-3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>20000</h4>
-                Cups Of Coffee
-              </div>
-            </li>
 
-</ul>
-<p></p>
-</div>
-</div>
-</div>
-</div> </p>
+
         </section>
 
         <aside id="sidebar">
