--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
           ABC of codes to things.<br> 
           The use of 3D printer.</p>
           <div>
+          <img src="img/3d.jpg" width="600"><br>
+        </div>
+          <div>
           <img src="img/deerring.jpg" width="600"><br>
         </div>
         </div>
